Fixed layout bug for chrome

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -33,7 +33,6 @@
     display: flex;
     flex-direction: row;
     
-    column-gap: $projectImageGap;
     row-gap: $projectImageGap;
 
     justify-content: space-between;
